# ECS-test-task

./: README.md
ECS/: ECS.sln
ECS/ECS/: CMakeLists.txt  ECS.cpp  ECS.vcxproj  ECS.vcxproj.filters  components.h  saveFile.json  scene.cpp  scene.h  systems.cpp  systems.h
